[package]
name = "tinydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = "0.1"
futures = { version = "0.3.0" }

bytes = { version = "1", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
